# trading_common

./: .gitignore  CMakeLists.txt  README.md
cmake/: nlohmann_json.cmake  simple_logger.cmake
include/trading_common/: common.h  instructions.h  ohlc.h  order.h  pnl.h  position.h
src/: instructions.cpp  ohlc.cpp  order.cpp  pnl.cpp  position.cpp
test/: CMakeLists.txt  test_instructions.cpp  test_ohlc.cpp  test_order.cpp  test_pnl.cpp  test_position.cpp
